Fixed more spacing. Bottom bar is dynamic

--- a/template/styles.css
+++ b/template/styles.css
@@ -45,9 +45,8 @@
 
 /*Bottom/footer CSS*/
 .bottombar {
-  position: fixed;
   background-color: #13284c;
-  height: 6vh;
+  height: 12vh;
   width: 100%;
   bottom: 0;
   left: 0;
@@ -91,6 +90,7 @@ body {
   background-size: cover;
   width: auto;
   height: auto;
+  margin: 0;
 }
 
 #bottomnav, #copyright, #topnav{
